mingle/test/gauge/smokeTests/libs/com.thoughtworks.twist.driver.sahi_3.0.0.13132-b6ff0d9ea3753c/sahi/userdata/scripts/demo/shouldfail/log_browser_exception_as_failure.sah
try {
	_click(_link("does not exist")); // SHOULD FAIL ON THIS LINE ONLY
	_log("Should not come here");
} catch(e) {
	_log("In catch");
    _logExceptionAsFailure(e);
}
_log("Should come here 2");
